<resources>
    <string name="app_name">HPMemory</string>


    <string name="create_account">Hesap Oluştur</string>
    <string name="email">Email</string>
    <string name="password">Şifre</string>
    <string name="confirm_password">Şifreyi onayla</string>
    <string name="or">Zaten Hesabınız var mı ?</string>
    <string name="sign_in">Giriş Yap</string>
    <string name="orcreate">Hesabınız yok mu?</string>
    <string name="username">Kullanıcı Adı</string>
</resources>